using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;
using UnityEngine;


internal class AnimationString
{
	internal static string isMoving = "IsMoving";
	internal static string isGrounded = "IsGrounded";
	internal static string yVelocity = "yVelocity";
	internal static string jump = "Jump";
	internal static string isOnWall = "IsOnWall";
	internal static string isOnCeiling = "IsOnCeiling";
	internal static string attack = "Attack";
	internal static string canMove = "CanMove";
	internal static string hasTarget = "HasTarget";
	internal static string isAlive = "IsAlive";
	internal static string isHit = "IsHit";
	internal static string hit = "Hit";
	internal static string attackCD = "AttackCD";
	internal static string startFade = "StartFade";
	internal static string saint = "Saint";
	internal static string comboTimer = "ComboTimer";
	internal static string comboCounter = "ComboCounter";
	internal static string blocking = "Blocking";
	internal static string blocked = "Blocked";
}

